--- a/R/C14 contour plot.Rmd
+++ b/R/C14 contour plot.Rmd
@@ -38,49 +38,69 @@ library("AquaEnv")
 library("gsw")
 ```
 
-#Read table, combine with C14 hot for the cycle, exp and station number.
+
+# Read table, combine with C14 hot for the cycle, exp and station number.
 ```{r}
 CTD_raw <- readxl::read_excel("../data_used/TK_CTD Downcasts.xlsx") %>%
-  rename(CTD = `cast`) %>%
+  dplyr::rename(CTD = `cast`) %>%
   mutate(datetime =  dmy_hms(datetime)) %>%
   filter(!is.na(t)) %>%
   mutate(date = date(datetime)) %>%
+  mutate(time = hour(datetime)) %>%
   mutate(julian_day = julian(date, origin = date("2018-01-01")))
 C14_hot <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, `STN`, `CTD#`, `Julian Day`)%>%   
-     rename(cycle = `Cycle#`,
+     dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
             station = `STN`)%>%
-            #julian_day = `Julian Day`)%>%
   mutate(ctd_char=stringr::str_remove_all(`CTD#`,"U"))%>%
   mutate(CTD=as.double(ctd_char))%>%
       distinct()
 
 CTD <- dplyr::right_join(C14_hot, CTD_raw) %>%
-  select(-ctd_char, -`CTD#`)
+  select(-ctd_char, -`CTD#`) %>%
+  filter(between(time, 9, 12))
 
 CTD
+```
+
+#Select depth every 5m
+```{r}
+depth_selected <- data.frame(seq(0, 500, by= 5))
+names(depth_selected)[1] <- "p"
+temp_data <- CTD %>% select(cycle, exp, station, date, julian_day, time, CTD, lat, lon, p, t, t2) %>%
+  mutate(t_mean  =  (t+t2)/2)
+temp_data <- inner_join(temp_data,depth_selected)
+temp_data
+```
+
+#check data on one day
+```{r}
+depth_297 <- temp_data %>% filter(julian_day == 297)
+depth_rep <- ggplot(depth_297, aes(x = t_mean, y = p)) +
+  geom_line()+
+   scale_y_reverse() 
+depth_rep
 ```
 
 
 #Temperature contour plot
 ```{r}
 
-x <- CTD %>% select (julian_day, p)
-y <- CTD$t
+x <- temp_data%>% select (julian_day, p)
+y <- temp_data$t_mean
 
 scaling_factor=15
 
 #Creating polygon and Grid for Raster 
 
-xmin_gg=as.Date("2018-10-01")
-xmax_gg=as.Date("2018-11-30")
+xmin_gg=as.Date("2018-10-21")
+xmax_gg=as.Date("2018-11-19")
 
-xmin <- min(CTD$julian_day) - 2
-xmax <- max(CTD$julian_day) + 2
-ymax <- max(CTD$t) + 2
-ymin <- min(CTD$t) - 2
-
+xmin <- min(temp_data$julian_day) - 2
+xmax <- max(temp_data$julian_day) + 2
+ymax <- 500
+ymin <- 0
 # Create binding polygon
 
   x_coord <- c(xmin,
@@ -133,7 +153,7 @@ grid_krig <- raster::mask(x=grid_krig, mask=polygons)
 val <- data.frame(t_fit = raster::getValues(grid_krig))
 xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
 grid_t_krig <- bind_cols(xy,val) %>%   
-  mutate(date=as_date(x, origin="2016-01-01"), 
+  mutate(date=as_date(x, origin="2018-01-01"), 
          t_fit = if_else(t_fit <0,0,t_fit) ) %>%
   dplyr::rename(depth_m=y) %>% 
   filter(!is.na(t_fit))
@@ -142,26 +162,490 @@ grid_t_krig <- bind_cols(xy,val) %>%
   
 temp <- ggplot(grid_t_krig, aes(x=date, y=depth_m)) +
         geom_raster(mapping=aes(fill = t_fit)) + 
-        geom_contour(data = grid_t_krig, mapping = aes(z=t_fit),  
-                               breaks = c(seq(0, 15,3))) +
+        geom_contour(data = grid_t_krig, mapping = aes(z=t_fit), colour = "white", 
+                               breaks = c(seq(5, 15,1))) +
         scale_fill_distiller(palette = "Spectral") +
-        scale_x_date(limits=c(xmin_gg,xmax_gg), 
-                     date_breaks = "1 month", 
-                     date_minor_breaks = "1 week", 
+        scale_x_date(limits=c(xmin_gg,xmax_gg),
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day", 
                      date_labels =  "%d/%m/%y") +
         scale_y_reverse() +
-        geom_point(data=CTD, 
-                   mapping=aes(x=date, y=depth_m), size=0.5, color="white" ) +
-        ggtitle("2Downcast temp")  +
+        #geom_point(data=CTD, 
+        #mapping=aes(x=date, y=depth_m), size=0.5, color="white") +
+        ggtitle("Downcast temp")  +
         xlab("Date") + ylab("Depth (m)") +
         theme(panel.border = element_rect(colour = "black") ) +
         theme_bw(scaling_factor) +
-     labs(fill = "Temp") +    
-  theme(axis.text=element_text(size=28),
-        axis.title=element_text(size=28,face="bold"),
-        legend.title =element_text(size=28,face="bold"),
-        legend.text = element_text(size=20),        
-        title = element_text(size=28, face = "bold", hjust = 0.5))
-temp
+        labs(fill = "Temp") +    
+        theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=10,face="bold"),
+        legend.title =element_text(size=10,face="bold"),
+        legend.text = element_text(size=10),        
+        title = element_text(size=10, face = "bold", hjust = 0.5))
+plot(temp)
+
+ggsave("../figures/CTD_temp.png")
 
 ```
+
+#Salinity plot
+```{r}
+salinity_data <- CTD %>% select(cycle, exp, station, julian_day, CTD, lat, lon, p, s, s2) %>%
+  mutate(s_mean  =  (s+s2)/2)
+salinity_data <- inner_join(salinity_data,depth_selected)
+salinity_data
+```
+```{r}
+x <- salinity_data %>% select (julian_day, p)
+y <- salinity_data$s_mean
+
+scaling_factor=15
+
+#Creating polygon and Grid for Raster 
+
+xmin_gg=as.Date("2018-10-21")
+xmax_gg=as.Date("2018-11-19")
+
+xmin <- min(salinity_data$julian_day) - 2
+xmax <- max(salinity_data$julian_day) + 2
+ymax <- 500
+ymin <- 0
+# Create binding polygon
+
+  x_coord <- c(xmin,
+               xmin,
+               xmax,
+               xmax,
+               xmin)
+  y_coord <- c(ymin,
+               ymax,
+               ymax,
+               ymin,
+               ymin)
+  polygon <- cbind(x_coord, y_coord)
+  polygon <- sp::Polygon(polygon)
+  
+  polygons = sp::SpatialPolygons(list(sp::Polygons(list(polygon), "s1")))
+  # plot(polygons)
+  
+  # Create grid
+  
+  gridint <- 1 # Multiplyong factor to increase the resolution of the grid
+  gridx <- (xmax-xmin + 1)*gridint
+  gridy <- round((ymax-ymin +1 )*gridint)
+  grid <- raster::raster(nrows= gridy, ncols=gridx, 
+                         xmn=xmin, 
+                         xmx=xmax, 
+                         ymn=ymin, ymx=ymax)
+  
+  #Using KRIGE fitting to interpolate grid
+
+# fit
+  fit_krig <- fields::Krig(x, y, theta=100)
+  #this part takes too long.
+
+# look at the surface
+# fields::surface(fit_krig, type="C") 
+
+# interpolate to the raster grid
+grid_krig <- raster::interpolate(grid, fit_krig)
+
+# Mask the grid
+grid_krig <- raster::mask(x=grid_krig, mask=polygons)
+
+# Plot the interpolation
+# raster::plot(grid_krig)
+
+# Transform to data frame for ggplot
+val <- data.frame(s_fit = raster::getValues(grid_krig))
+xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
+grid_s_krig <- bind_cols(xy,val) %>%   
+  mutate(date=as_date(x, origin="2018-01-01"), 
+         s_fit = if_else(s_fit <0,0,s_fit) ) %>%
+  dplyr::rename(depth_m=y) %>% 
+  filter(!is.na(s_fit))
+
+# Plot with ggplot
+  
+salinity <- ggplot(grid_s_krig, aes(x=date, y=depth_m)) +
+        geom_raster(mapping=aes(fill = s_fit)) + 
+        geom_contour(data = grid_s_krig, mapping = aes(z=s_fit),   colour = "white",
+                               breaks = c(seq (34.2, 35.2, 0.2))) +
+        scale_fill_distiller(palette = "Spectral") +
+        scale_x_date(limits=c(xmin_gg,xmax_gg), 
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day", 
+                     date_labels =  "%d/%m/%y") +
+        scale_y_reverse() +
+        #geom_point(data=CTD, 
+        #mapping=aes(x=date, y=depth_m), size=0.5, color="white") +
+        ggtitle("Downcast salinity")  +
+        xlab("Date") + ylab("Depth (m)") +
+        theme(panel.border = element_rect(colour = "black") ) +
+        theme_bw(scaling_factor) +
+        labs(fill = "Salinity") +    
+        theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=10,face="bold"),
+        legend.title =element_text(size=10,face="bold"),
+        legend.text = element_text(size=10),        
+        title = element_text(size=10, face = "bold", hjust = 0.5))
+plot(salinity)
+
+ggsave("../figures/CTD_salinity.png")
+```
+
+#Oxygen plot?
+```{r}
+oxygen_data <- CTD %>% select(julian_day, CTD, lat, lon, p, os, os2) %>%
+  mutate(os_mean  =  (os+os2)/2)
+oxygen_data <- inner_join(oxygen_data,depth_selected)
+oxygen_data
+```
+```{r}
+x <- oxygen_data %>% select (julian_day, p)
+y <- oxygen_data$os_mean
+
+scaling_factor=15
+
+#Creating polygon and Grid for Raster 
+
+xmin_gg=as.Date("2018-10-21")
+xmax_gg=as.Date("2018-11-19")
+
+xmin <- min(oxygen_data$julian_day) - 2
+xmax <- max(oxygen_data$julian_day) + 2
+ymax <- 500
+ymin <- 0
+# Create binding polygon
+
+  x_coord <- c(xmin,
+               xmin,
+               xmax,
+               xmax,
+               xmin)
+  y_coord <- c(ymin,
+               ymax,
+               ymax,
+               ymin,
+               ymin)
+  polygon <- cbind(x_coord, y_coord)
+  polygon <- sp::Polygon(polygon)
+  
+  polygons = sp::SpatialPolygons(list(sp::Polygons(list(polygon), "s1")))
+  # plot(polygons)
+  
+  # Create grid
+  
+  gridint <- 1 # Multiplyong factor to increase the resolution of the grid
+  gridx <- (xmax-xmin + 1)*gridint
+  gridy <- round((ymax-ymin +1 )*gridint)
+  grid <- raster::raster(nrows= gridy, ncols=gridx, 
+                         xmn=xmin, 
+                         xmx=xmax, 
+                         ymn=ymin, ymx=ymax)
+  
+  #Using KRIGE fitting to interpolate grid
+
+# fit
+  fit_krig <- fields::Krig(x, y, theta=100)
+  #this part takes too long.
+
+# look at the surface
+# fields::surface(fit_krig, type="C") 
+
+# interpolate to the raster grid
+grid_krig <- raster::interpolate(grid, fit_krig)
+
+# Mask the grid
+grid_krig <- raster::mask(x=grid_krig, mask=polygons)
+
+# Plot the interpolation
+# raster::plot(grid_krig)
+
+# Transform to data frame for ggplot
+val <- data.frame(os_fit = raster::getValues(grid_krig))
+xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
+grid_os_krig <- bind_cols(xy,val) %>%   
+  mutate(date=as_date(x, origin="2018-01-01"), 
+         os_fit = if_else(os_fit <0,0,os_fit) ) %>%
+  dplyr::rename(depth_m=y) %>% 
+  filter(!is.na(os_fit))
+
+# Plot with ggplot
+  
+oxygen <- ggplot(grid_os_krig, aes(x=date, y=depth_m)) +
+        geom_raster(mapping=aes(fill = os_fit)) + 
+        geom_contour(data = grid_os_krig, mapping = aes(z=os_fit),   colour = "white",
+                               breaks = c(seq (206, 292, 10))) +
+        scale_fill_distiller(palette = "Spectral") +
+        scale_x_date(limits=c(xmin_gg,xmax_gg), 
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day", 
+                     date_labels =  "%d/%m/%y") +
+        scale_y_reverse() +
+        #geom_point(data=CTD, 
+        #mapping=aes(x=date, y=depth_m), size=0.5, color="white") +
+        ggtitle("Downcast oxygen")  +
+        xlab("Date") + ylab("Depth (m)") +
+        theme(panel.border = element_rect(colour = "black") ) +
+        theme_bw(scaling_factor) +
+        labs(fill = "oxygen") +    
+        theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=10,face="bold"),
+        legend.title =element_text(size=10,face="bold"),
+        legend.text = element_text(size=10),        
+        title = element_text(size=10, face = "bold", hjust = 0.5))
+plot(oxygen)
+
+ggsave("../figures/CTD_oxygen.png")
+```
+
+#Flourescence plot
+```{r}
+fl_data <- CTD %>% select(cycle, exp, station, julian_day, CTD, lat, lon, p, fl)
+fl_data <- inner_join(fl_data,depth_selected)
+fl_data
+```
+
+```{r}
+x <- fl_data %>% select (julian_day, p)
+y <- fl_data$fl
+
+scaling_factor=15
+
+#Creating polygon and Grid for Raster 
+
+xmin_gg=as.Date("2018-10-21")
+xmax_gg=as.Date("2018-11-19")
+
+xmin <- min(fl_data$julian_day) - 2
+xmax <- max(fl_data$julian_day) + 2
+ymax <- 200
+ymin <- 0
+# Create binding polygon
+
+  x_coord <- c(xmin,
+               xmin,
+               xmax,
+               xmax,
+               xmin)
+  y_coord <- c(ymin,
+               ymax,
+               ymax,
+               ymin,
+               ymin)
+  polygon <- cbind(x_coord, y_coord)
+  polygon <- sp::Polygon(polygon)
+  
+  polygons = sp::SpatialPolygons(list(sp::Polygons(list(polygon), "s1")))
+  # plot(polygons)
+  
+  # Create grid
+  
+  gridint <- 1 # Multiplyong factor to increase the resolution of the grid
+  gridx <- (xmax-xmin + 1)*gridint
+  gridy <- round((ymax-ymin +1 )*gridint)
+  grid <- raster::raster(nrows= gridy, ncols=gridx, 
+                         xmn=xmin, 
+                         xmx=xmax, 
+                         ymn=ymin, ymx=ymax)
+  
+  #Using KRIGE fitting to interpolate grid
+
+# fit
+  fit_krig <- fields::Krig(x, y, theta=100)
+  #this part takes too long.
+
+# look at the surface
+# fields::surface(fit_krig, type="C") 
+
+# interpolate to the raster grid
+grid_krig <- raster::interpolate(grid, fit_krig)
+
+# Mask the grid
+grid_krig <- raster::mask(x=grid_krig, mask=polygons)
+
+# Plot the interpolation
+# raster::plot(grid_krig)
+
+# Transform to data frame for ggplot
+val <- data.frame(fl_fit = raster::getValues(grid_krig))
+xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
+grid_fl_krig <- bind_cols(xy,val) %>%   
+  mutate(date=as_date(x, origin="2018-01-01"), 
+         fl_fit = if_else(fl_fit <0,0,fl_fit) ) %>%
+  dplyr::rename(depth_m=y) %>% 
+  filter(!is.na(fl_fit))
+
+# Plot with ggplot
+  
+fl_plot <- ggplot(grid_fl_krig, aes(x=date, y=depth_m)) +
+        geom_raster(mapping=aes(fill = fl_fit)) + 
+        geom_contour(data = grid_fl_krig, mapping = aes(z=fl_fit),   colour = "white",
+                               breaks = c(seq (0, 2.5, 0.5))) +
+        scale_fill_distiller(palette = "Spectral") +
+        scale_x_date(limits=c(xmin_gg,xmax_gg), 
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day", 
+                     date_labels =  "%d/%m/%y") +
+        scale_y_reverse() +
+        #geom_point(data=CTD, 
+        #mapping=aes(x=date, y=depth_m), size=0.5, color="white") +
+        ggtitle("Downcast flouresence")  +
+        xlab("Date") + ylab("Depth (m)") +
+        theme(panel.border = element_rect(colour = "black") ) +
+        theme_bw(scaling_factor) +
+        labs(fill = "Flourescence") +    
+        theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=10,face="bold"),
+        legend.title =element_text(size=10,face="bold"),
+        legend.text = element_text(size=10),        
+        title = element_text(size=10, face = "bold", hjust = 0.5))
+plot(fl_plot)
+
+ggsave("../figures/CTD_flourescence.png")
+```
+
+#PAR plot
+```{r}
+par_data <- CTD %>% select(cycle, exp, station, julian_day, CTD, lat, lon, p, par)
+par_data <- inner_join(par_data,depth_selected)
+par_data
+```
+
+```{r}
+x <- par_data %>% select (julian_day, p)
+y <- par_data$par
+
+scaling_factor=15
+
+#Creating polygon and Grid for Raster 
+
+xmin_gg=as.Date("2018-10-21")
+xmax_gg=as.Date("2018-11-19")
+
+xmin <- min(par_data$julian_day) - 2
+xmax <- max(par_data$julian_day) + 2
+ymax <- 200
+ymin <- 0
+# Create binding polygon
+
+  x_coord <- c(xmin,
+               xmin,
+               xmax,
+               xmax,
+               xmin)
+  y_coord <- c(ymin,
+               ymax,
+               ymax,
+               ymin,
+               ymin)
+  polygon <- cbind(x_coord, y_coord)
+  polygon <- sp::Polygon(polygon)
+  
+  polygons = sp::SpatialPolygons(list(sp::Polygons(list(polygon), "s1")))
+  # plot(polygons)
+  
+  # Create grid
+  
+  gridint <- 1 # Multiplyong factor to increase the resolution of the grid
+  gridx <- (xmax-xmin + 1)*gridint
+  gridy <- round((ymax-ymin +1 )*gridint)
+  grid <- raster::raster(nrows= gridy, ncols=gridx, 
+                         xmn=xmin, 
+                         xmx=xmax, 
+                         ymn=ymin, ymx=ymax)
+  
+  #Using KRIGE fitting to interpolate grid
+
+# fit
+  fit_krig <- fields::Krig(x, y, theta=100)
+  #this part takes too long.
+
+# look at the surface
+# fields::surface(fit_krig, type="C") 
+
+# interpolate to the raster grid
+grid_krig <- raster::interpolate(grid, fit_krig)
+
+# Mask the grid
+grid_krig <- raster::mask(x=grid_krig, mask=polygons)
+
+# Plot the interpolation
+# raster::plot(grid_krig)
+
+# Transform to data frame for ggplot
+val <- data.frame(par_fit = raster::getValues(grid_krig))
+xy <- as.data.frame(raster::xyFromCell(grid_krig,1:raster::ncell(grid_krig)))
+grid_par_krig <- bind_cols(xy,val) %>%   
+  mutate(date=as_date(x, origin="2018-01-01"), 
+         par_fit = if_else(par_fit <0,0,par_fit) ) %>%
+  dplyr::rename(depth_m=y) %>% 
+  filter(!is.na(par_fit))
+
+# Plot with ggplot
+
+par_plot <- ggplot(grid_par_krig, aes(x=date, y=depth_m)) +
+        geom_raster(mapping=aes(fill = par_fit)) + 
+        geom_contour(data = grid_par_krig, mapping = aes(z=par_fit),   colour = "white",
+                               breaks = c(seq (0, 1100, 100))) +
+        scale_fill_distiller(palette = "Spectral") +
+        scale_x_date(limits=c(xmin_gg,xmax_gg), 
+                     date_breaks = "1 week", 
+                     date_minor_breaks = "1 day", 
+                     date_labels =  "%d/%m/%y") +
+        scale_y_reverse() +
+        #geom_point(data=CTD, 
+        #mapping=aes(x=date, y=depth_m), size=0.5, color="white") +
+        ggtitle("Downcast PAR")  +
+        xlab("Date") + ylab("Depth (m)") +
+        theme(panel.border = element_rect(colour = "black") ) +
+        theme_bw(scaling_factor) +
+        labs(fill = "PAR") +    
+        theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=10,face="bold"),
+        legend.title =element_text(size=10,face="bold"),
+        legend.text = element_text(size=10),        
+        title = element_text(size=10, face = "bold", hjust = 0.5))
+plot(par_plot)
+
+ggsave("../figures/CTD_par.png")
+```
+
+
+
+```{r, eval=FALSE}
+CTD <- dplyr::right_join(C14_hot, CTD_raw) %>%
+  select(-ctd_char, -`CTD#`) %>%
+  filter(between(time, 9, 12)) %>%
+  filter(julian_day == 297 & 298 & 299 & 300 & 301 & 302 & 305 & 306 & 307 & 308 & 309 & 319 & 320 & 311 & 312 & 313 & 315 & 316 & 317)# select only rows corresponding to cycle days
+CTD$julian_day <- as.character(CTD$julian_day)
+CTD$cycle[grep("297", CTD$julian_day)] = "1"
+CTD$cycle[grep("298", CTD$julian_day)] = "1"
+CTD$cycle[grep("299", CTD$julian_day)] = "1"
+CTD$cycle[grep("300", CTD$julian_day)] = "1"
+CTD$cycle[grep("301", CTD$julian_day)] = "1"
+CTD$cycle[grep("302", CTD$julian_day)] = "1"
+CTD$cycle[grep("305", CTD$julian_day)] = "2"
+CTD$cycle[grep("306", CTD$julian_day)] = "2"
+CTD$cycle[grep("307", CTD$julian_day)] = "2"
+CTD$cycle[grep("308", CTD$julian_day)] = "2"
+CTD$cycle[grep("309", CTD$julian_day)] = "2"
+CTD$cycle[grep("311", CTD$julian_day)] = "3"
+CTD$cycle[grep("312", CTD$julian_day)] = "3"
+CTD$cycle[grep("313", CTD$julian_day)] = "3"
+CTD$cycle[grep("315", CTD$julian_day)] = "4"
+CTD$cycle[grep("316", CTD$julian_day)] = "4"
+CTD$cycle[grep("317", CTD$julian_day)] = "4"
+CTD$cycle[grep("319", CTD$julian_day)] = "5"
+CTD$cycle[grep("320", CTD$julian_day)] = "5"
+
+CTD <- CTD %>%mutate(cycle_name = recode(cycle, "1" = "Subantarctic 1",
+                                    "2" = "Subantarctic 2",
+                                    "3" = "Subtropical 1",
+                                    "4" = "Subtropical 2",
+                                    "5" = "Subantarctic 3")) 
+CTD$cycle_name <- factor(CTD$cycle_name,levels = c("Subtropical 1", "Subtropical 2", "Subantarctic 1", "Subantarctic 2", "Subantarctic 3")) 
+ 
+```
+
