--- a/R_C14_rates calculation/QE_temp and chl map.Rmd
+++ b/R_C14_rates calculation/QE_temp and chl map.Rmd
@@ -19,7 +19,7 @@ Denise note:
 ```{r}
 library(ncdf4) # package for netcdf manipulation
 library(raster) # package for raster manipulation
-library(rgdal) # package for geospatial analysis
+#library(rgdal) # package for geospatial analysis
 library(ggplot2) # package for plotting
 library(lattice)
 library(RColorBrewer)
@@ -68,9 +68,9 @@ Conventions <- ncatt_get(nc_SST,0,"Conventions")
 
 ```{r}
 #subset data for NZ area (coordinates lat -46 to -41, lon 172 to -176)
-lon_sub <- which( nc_SST$dim$lon$vals > 172 | nc_SST$dim$lon$vals < -176)
-lat_sub <- which( nc_SST$dim$lat$vals > -46 & nc_SST $dim$lat$vals < -41)
-lon_sub <- c(which(nc_SST$dim$lon$vals > 172) , which(nc_SST$dim$lon$vals < -176) )
+lon_sub <- which( nc_SST$dim$lon$vals > 171 | nc_SST$dim$lon$vals < -178)
+lat_sub <- which( nc_SST$dim$lat$vals > -46.5 & nc_SST $dim$lat$vals < -41.5)
+lon_sub <- c(which(nc_SST$dim$lon$vals > 171) , which(nc_SST$dim$lon$vals < -178) )
 # replace netCDF fill values with NA's
 tmp_array[tmp_array==fillvalue$value] <- NA
 temp_nz <- tmp_array [lon_sub, lat_sub]
@@ -103,11 +103,63 @@ str(temp_nz_df)
 #error here. The axis values are not coordinates (lat -46 to -41, lon 172 to -176). I think the way would be to create a new create a column with the coordinates, but because of the way the data is formed I'm not sure how to do.
 plot_temp<- ggplot() +
     geom_raster(data = temp_nz_df , aes(x = x, y = y, fill = layer)) +
-    scale_fill_viridis_c() +
-    coord_quickmap()+
-    theme(aspect.ratio = 3/4)
+  scale_fill_gradientn(colours=rev(brewer.pal(20,"RdBu")))
+  scale_fill_manual(values = colorRampPalette(rev(brewer.pal(10,"RdBu"))))
+
 plot_temp
 
+pdf("figures/GRC_figures/map_temp.pdf", height=4, width=6) ; plot(plot_temp) ; dev.off()
+
+
+```
+
+#trying rnatural earth package with ggplot (does not work over the 180 dateline)
+```{r}
+library(dplyr)
+
+sampling_location <- readxl::read_excel("../data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+  dplyr::select (`Cycle#`, `EXP#`, Lat_DD, Long_DD) %>%   
+     rename(cycle = `Cycle#`,
+            exp = `EXP#`,
+            lat = Lat_DD, 
+            long = Long_DD) %>%
+  distinct() %>%
+  na.omit() %>%
+  group_by(cycle, exp) %>%
+  slice(1)
+
+
+C14_DPM
+
+library(ggplot2)
+library(rnaturalearth)
+library(rnaturalearthdata)
+library(sf)
+library(rgeos)
+library(ggspatial)
+
+# load data
+world <- ne_countries(scale = "medium", returnclass = "sf")
+
+#deal with dateline using st_shift_longitude
+world_2 = st_shift_longitude(world)
+
+sites_2 = st_as_sf(sampling_location,
+                   coords = c("long", "lat"),
+                   crs = 4326) %>%
+  st_shift_longitude()
+
+p<-ggplot() +
+  geom_sf(data = world_2) +
+  geom_sf(data = sites_2) +
+  coord_sf(crs=4326,
+           xlim = c(172,181), 
+           ylim = c(-46, -42)) +
+  theme_bw()
+
+p
+
+pdf("figures/GRC_figures/map_stations.pdf", height=4, width=6) ; plot(p) ; dev.off()
 ```
 
 # Plot Chlorophyll data
